--- a/src/app/beer-list/beer-list.component.scss
+++ b/src/app/beer-list/beer-list.component.scss
@@ -10,6 +10,7 @@
   padding: 1em;
   border: 2px solid rgb(136, 112, 113);
   border-radius: .5em;
+  margin: 1em;
   img {
     width: 200px;
     height: 250px;
