--- a/src/app/single-beer/single-beer.component.html
+++ b/src/app/single-beer/single-beer.component.html
@@ -6,6 +6,8 @@
     <p class="manufacturer">by {{ beer.manufacturer }}</p>
     <h3>Description</h3>
     <p>{{ beer.description }}</p>
+    <h3>Ingrédients principaux</h3>
+    <p>{{ beer.mainIngredient }}</p>
     <div class="like-buttons" *ngIf="!likePending">
       <div class="likes">
         <i [ngClass]="{ 'fas liked': liked, 'far': !liked, 'disabled': disliked }" class="like fa-thumbs-up fa-lg" (click)="onLike()"></i>
